2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (soft_reset_payload): Add missing
	branch.
	(ee_soft_reset_core): Improve robustness. Fail on detected
	errors.
	* e-hal/src/e-loader.c (e_load_group): Check return value from
	ee_soft_reset_core().

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (e_load_group): Replace call to
	ee_reset_group() with call to ee_soft_reset_core().
	* e-hal/src/epiphany-hal-api-local.h: Add ee_soft_reset_core
	function prototype.
	* e-hal/src/epiphany-hal.c (ee_reset_regs): Implemented.
	(ee_soft_reset_core): Implemented.

2016-02-17  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (e_load_group): Call ee_reset_group.
	* e-hal/src/epiphany-hal-api-local.h: Add function prototypes
	for ee_reset_group and ee_start_group.
	* e-hal/src/epiphany-hal.c (ee_reset_group): Implemented.
	(ee_reset_core): Use ee_reset_group.
	(e_reset_group): Use ee_reset_group.
	(ee_start_group): Implemented.
	(e_start): Use ee_start_group.
	(e_start_group): Use ee_start_group.

2016-02-16  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/Makemodule.am: Add e-dump-regs target.
	* e-utils/src/e-dump-regs.c: New file.

2016-02-16  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-shm-manager.c (e_shm_init_native): Fill in
	shm_alloc struct.
	* e-hal/src/epiphany-hal.c (e_init): Call e_shm_init() again.

2016-02-15  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/platform.hdf (ESYS_REGS_BASE): Remove.
	(EMEM_BASE_ADDRESS): Use mesh address.
	* bsps/parallella_E16G3_1GB/parallella_E16G3_1GB.hdf: Likewise.
	* e-hal/src/epiphany-hal-api-local.h: Update EPIPHANY_DEV.
	* e-hal/src/epiphany-hal-data-local.h (e_platform_t): Remove
	regs_base member.
	* e-hal/src/epiphany-hal.c (struct target_ops): Remove
	ee_read_esys and ee_write_esys members.
	(e_init): Comment out call to e_shm_init().
	(e_finalize): Remove call ee_disable system().
	(ee_read_esys_esim): Remove.
	(ee_read_esys_native): Remove.