@@ -1,5 +1,10 @@
 2016-02-18  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/src/epiphany-hal.c (ee_soft_reset_core): Replace
+	unnecessary call to ee_reset_regs() with one write to ILATCL.
+
+2016-02-18  Ola Jeppsson  <ola@adapteva.com>
+
 	* e-hal/src/epiphany-hal.c (soft_reset_payload): Add missing
 	branch.
 	(ee_soft_reset_core): Improve robustness. Fail on detected
